--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <header class="page-header">
-    <h1>page-headerHarmful algal blooms in China during 1981-2018</h1>
+    <donghai_new.jpg>page-headerHarmful algal blooms in China during 1981-2018</donghai_new.jpg>
 </header>
 
 <main>
