--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <header class="page-header">
-    <h>page-headerHarmful algal blooms in China during 1981-2018</h>
+    <h>Harmful algal blooms in China during 1981-2018</h>
 </header>
 
 <main>
