--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
-<header class="page-header">
+<article>
     <h1>Harmful algal blooms in China during 1981-2018</h1>
-</header>
+    <ol>
+        <li>In china, more than 1500 harmful algal blooms (HABs) occurred in the coastal sea.</li>
+        <li>These caused hundreds of billions of economic losses.</li>
+        <li>Large ecological damage!</li>
+    </ol>
+    <footer>
+        <p>© 2018 Gandalf</p>
+    </footer>
+</article>
 
-<main>
-<p>In china, more than 1500 harmful algal blooms (HABs) occurred in the coastal sea, which casued hundreds of billions of economic losses and ecological damage!</p>
-</main>
