--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <ol>
         <li>In china, more than 1500 harmful algal blooms (HABs) occurred in the coastal sea.</li>
         <li>These caused hundreds of billions of economic losses.</li>
-        <li>Large ecological damage!</li>
+        <li>HAB caused large ecological damage!</li>
     </ol>
     <footer>
         <p>© 2018 Gandalf</p>
