--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <article>
-    <h1>Harmful algal blooms in China during 1981-2018</h1>
+    <h1>Harmful algal blooms in China sea during 1981-2018</h1>
     <ol>
         <li>In china, more than 1500 harmful algal blooms (HABs) occurred in the coastal sea.</li>
         <li>These caused hundreds of billions of economic losses.</li>
