--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-<article>
-    <h1>How to be a wizard</h1>
-    <ol>
-        <li>Grow a long, majestic beard.</li>
-        <li>Wear a tall, pointed hat.</li>
-        <li>Have I mentioned the beard?</li>
-    </ol>
+<!DOCTYPE html>
+<head>
+    <link rel="stylesheet" type="text/css" href="mystyle.css">
+</head>
+<html>
+    <h1>Harmful algal blooms in China</h1>
     <footer>
         <p>© 2018 Gandalf</p>
     </footer>
-</article>
+</html>
