--- a/index.html
+++ b/index.html
@@ -1,7 +1,1 @@
-<!DOCTYPE html>
-<head>
-    <link rel="stylesheet" type="text/css" href="mystyle.css">
-</head>
-<html>
-    <h1>Harmful algal blooms in China</h1>
-</html>
+<img src="https://raw.githubusercontent.com/mdn/beginner-html-site/gh-pages/images/firefox-icon.png">
