--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<p>A link to my <a href="https://www.mozilla.org/" title="The Mozilla homepage" target="_blank">favorite website</a>.</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>我的测试页面</title>
+  </head>
+  <body>
+    <img src="images/donghai_new.jpg" alt="我的测试页面">
+  </body>
+</html> 
