--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>我的测试页面</title>
   </head>
   <body>
-    <img src="images/donghai_new.jpg" alt="我的测试页面">
+    <img src="donghai_new.jpg" alt="我的测试页面">
   </body>
 </html> 
