--- a/index.html
+++ b/index.html
@@ -8,3 +8,26 @@
     <img src="donghai_new.jpg" alt="我的测试页面">
   </body>
 </html> 
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>测试页面</title>
+  </head>
+  <body>
+    <h1>中国东海有害藻华</h1>
+    <img src="donghai_new.jpg" alt="我的测试页面">
+
+    <p>有害藻华(Harmful algal blooms, HABs)是中国近海最严重的海洋灾害问题之一，它给中国海洋生态系统和社会经济造成了巨大的损失。</p>
+
+    <ul>
+      <li>1933年以来的中国东海HABs的时空分布特征</li>
+      <li>HABs的种类分布特征</li>
+      <li>特定种类HABs变化的机制</li>
+    </ul>
+
+    <p>了解近年来的中国近海的HABs的时空分布变化对掌握中国近海的海洋灾害变化特征以及治理改善海洋环境污染的有效工作的展开至关重要。</p>
+
+    <p>为了达成我们共同的理想，我们遵循一系列的价值观和理念，请参阅 <a href="https://www.mozilla.org/zh-CN/about/manifesto/">Mozilla 宣言</a>。</p>
+  </body>
+</html>
