--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>我的测试页面</title>
+    <title>HABs in China</title>
   </head>
   <body>
-    <img src="donghai_new.jpg" alt="我的测试页面">
+    <img src="donghai_new.jpg" alt="HABs in China">
   </body>
 </html> 
 <!DOCTYPE html>
