--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
   <head>
+    <link href="fig.css" rel="stylesheet">
     <meta charset="utf-8">
     <title>HABs in China</title>
   </head>
