--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <ul>
       <li>有害藻华的定义</li>
       <li>有害藻华的危害</li>
-      <li>有害藻华的原因种</li>
+      <li>有害藻华的原因种类型</li>
     </ul>
 
     <p>了解近年来的中国近海的HABs的时空分布变化对掌握中国近海的海洋灾害变化特征以及治理改善海洋环境污染的有效工作的展开至关重要。</p>
