--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <meta charset="utf-8">
     <title>HABs in China</title>
   </head>
+  <header>
+      <h1>Harmful algal blooms in China</h1>
+    </header>
+    <nav>
+      <ul>
+        <li><a href="#">主页</a></li>
+        <li><a href="#">HAB的时空分布</a></li>
+        <li><a href="#">HAB原因种的时空分布</a></li>
+        <li><a href="#">HAB的环境影响因素</a></li>
+      </ul>
+    </nav>
   <body>
     <h1>中国近海有害藻华</h1>
     <img src="donghai_new.jpg" alt="HABs in China">
@@ -24,5 +35,23 @@
     </ul>
 
     <p>了解近年来的中国近海的HABs的时空分布变化对掌握中国近海的海洋灾害变化特征以及治理改善海洋环境污染的有效工作的展开至关重要。</p>
+    
+     <!-- 侧边栏在主内容右侧 -->
+    <aside>
+        <h2>相关链接</h2>
+        <ul>
+          <li><a href="#">言和</a></li>
+          <li><a href="#">乐正绫</a></li>
+          <li><a href="#">初音未来</a></li>
+          <li><a href="#">三无 Marblue</a></li>
+          <li><a href="#">二次元欢迎你</a></li>
+        </ul>
+      </aside>
+<!-- 以下是本站所有网页的统一页脚 -->
+
+    <footer>
+      <p>联系我们 xxxx.edu.cn </p>
+    </footer>
+
   </body>
 </html>
