--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+SC" rel="stylesheet">
     <link href="fig.css" rel="stylesheet">
     <meta charset="utf-8">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
     <title>HABs in China</title>
-  </head>
+  </head> 
+ <body>
   <header>
       <h1>Harmful algal blooms in China</h1>
     </header>
@@ -17,7 +19,7 @@
         <li><a href="#">HAB的环境影响因素</a></li>
       </ul>
     </nav>
-  <body>
+   <main>
     <h1>中国近海有害藻华</h1>
     <img src="donghai_new.jpg" alt="HABs in China">
  
@@ -48,7 +50,7 @@
         </ul>
       </aside>
 <!-- 以下是本站所有网页的统一页脚 -->
-
+   </main>
     <footer>
       <p>联系我们 xxxx.edu.cn </p>
     </footer>
