--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
    <main>
     <h1>中国近海有害藻华</h1>
     <img src="donghai_new.jpg" alt="HABs in China">
- 
+  <article>
     <h2>项目介绍</h2>
     <p>近年来，已成为中国近海突出的海洋生态灾害问题的有害藻华对人体健康、社会经济和海洋生态安全造成了威胁。定量化有害藻华的时空分布和其主要原因种的变化，探究有害藻华发生机理对改善和控制有害藻华事件发生至关重要。</p>
     <p>基于《中国赤潮灾害调查与评价1933-2009》、《赤潮100问》书籍，1989-2018年的《中国海洋环境质量状况公报》、2000-2018年的《中国海洋灾害公报》、《中国东海海区海洋环境公报》、《浙江省海洋环境状况公报》、《舟山市海洋环境状况公报》等国家、各海区和各省市的海洋公报年等文献资料，本项目校对和补充了由余弋和黄睿整理的1933年以来的中国渤海、黄海、东海和南海的有害藻华事件，量化了其时空分布变化。
@@ -36,13 +36,13 @@
     </ul>
 
     <p>了解近年来的中国近海的HABs的时空分布变化对掌握中国近海的海洋灾害变化特征以及治理改善海洋环境污染的有效工作的展开至关重要。</p>
-    
+     <article>
 
 <!-- 以下是本站所有网页的统一页脚 -->
    </main>
    
 <footer>
-      <p>联系我们 xxxx.deu.cn</p>
+      <p>联系我们 33120171151426@stu.xmu.edu.cn</p>
     </footer>
   </body>
 </html>
