--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
      <p>项目资助方桃花源生态保护基金会蓝色倡议专项，是专注于海洋保护的资助型项目，汇集了一批热心海洋保护的企业家和慈善家共同支持海洋保护工作。 将支持高校、科研院所和社会组织展开一线保护行动。在桃花源生态保护基金会的支持下，上海交大海洋学院周韫韬团队进行了中国近海有害藻华项目的工作。</p>
     
     <h2>有害藻华的定义</h2>
-    <p> 有害藻华(<i lang="uk-latn">Harmful algal Blooms, HAB</i>)是在一定条件下，由海洋浮游微藻或大型藻类等快速增殖或聚集，导致海洋生态系统严重破坏或引起水色变化的一种灾害性海洋生态异常现象。 赤潮（Red tide）和褐潮（Green tide）和绿潮（Brown tide）是中国HAB的主要类型。HAB常发生于海洋近岸的河口、海湾等区域，东海、渤海和南海近海是中国HAB的热点地区。</p>
+    <p> 有害藻华(Harmful algal Blooms, HAB)是在一定条件下，由海洋浮游微藻或大型藻类等快速增殖或聚集，导致海洋生态系统严重破坏或引起水色变化的一种灾害性海洋生态异常现象。 赤潮（Red tide）和褐潮（Green tide）和绿潮（Brown tide）是中国HAB的主要类型。HAB常发生于海洋近岸的河口、海湾等区域，东海、渤海和南海近海是中国HAB的热点地区。</p>
      <ul>
         <li>赤潮(红潮)是指在一定环境条件下，海洋中的浮游微藻、原生动物或细菌等在短时间内突发性链式增值和集聚导致的水色变红的灾难</li>
         <li>绿潮是海洋中一些大型绿藻（如浒苔）在一定环境条件下暴发性增殖或聚集达到某一水平，导致生态环境异常的一种现象。2008-2019年中国黄海海域持续发生浒苔灾害。</li>
@@ -37,14 +37,19 @@
       </ul>
     <h2>有害藻华的危害</h2>
        <ol>
-          <li>大量海洋生物死亡</li>
-          <li>危害人体健康</li>
-          <li>显著的渔业经济损失</li>
-          <li>影响滨海景观</li>
-          <li>破坏海洋生态系统</li>
+          <li>大量海洋生物死亡<br>
+         部分藻种能产生毒素，损伤海洋生物组织、改变水体理化环境等危害海洋生物生存，或使生物染毒甚至死亡。</li>
+          <li>危害人体健康<br>
+         直接接触有毒的HAB以及食用含有毒素的鱼类会对人体健康产生显著的危害。</li>
+          <li>显著的渔业经济损失<br>
+         有毒有害的HAB会使鱼类染毒或者大量死亡，从而使海水养殖业受到巨大的经济损失。2012年中国HAB导致了约20亿的直接经济损失。</li>
+          <li>影响滨海景观<br>
+        HAB能降低近海海水质量、滨海景观，破坏滨海生态系统，从而能直接对滨海旅游业产生负面影响。</li>
+          <li>破坏海洋生态系统<br>
+         密集覆盖特定海域的HAB能造成大量海洋生物的死亡，并且能创造出“死区”，从而导致直接威胁特定海域的生态安全</li>
          </ol>
       <h2>有害藻华的原因种类型</h2>
-    <p>甲藻、硅藻是中国近海<i lang="uk-latn">HAB</i>的主导原因种，蓝藻、褐藻和和微型藻等藻类也常是部分<i lang="uk-latn">HAB</i>的原因种。其中作为有毒有害原因种主导的<i lang="uk-latn">HAB</i>则能使海洋生态安全和社会经济遭受损失。</p>
+    <p>甲藻、硅藻是中国近海HAB的主导原因种，蓝藻、褐藻和和微型藻等藻类也常是部分HAB的原因种。其中作为有毒有害原因种主导的HAB则能使海洋生态安全和社会经济遭受损失。</p>
     
      </article>
    </main>
