--- a/index.html
+++ b/index.html
@@ -38,19 +38,24 @@
     <h2>有害藻华的危害</h2>
        <ol>
           <li>大量海洋生物死亡<br>
-         部分藻种能产生毒素，损伤海洋生物组织、改变水体理化环境等危害海洋生物生存，或使生物染毒甚至死亡。</li>
+           部分藻种能产生毒素，损伤海洋生物组织、改变水体理化环境等危害海洋生物生存，或使生物染毒甚至死亡。</li>
           <li>危害人体健康<br>
-         直接接触有毒的HAB以及食用含有毒素的鱼类会对人体健康产生显著的危害。</li>
+           直接接触有毒的HAB以及食用含有毒素的鱼类会对人体健康产生显著的危害。</li>
           <li>显著的渔业经济损失<br>
-         有毒有害的HAB会使鱼类染毒或者大量死亡，从而使海水养殖业受到巨大的经济损失。2012年中国HAB导致了约20亿的直接经济损失。</li>
+           有毒有害的HAB会使鱼类染毒或者大量死亡，从而使海水养殖业受到巨大的经济损失。2012年中国HAB导致了约20亿的直接经济损失。</li>
           <li>影响滨海景观<br>
-        HAB能降低近海海水质量、滨海景观，破坏滨海生态系统，从而能直接对滨海旅游业产生负面影响。</li>
+          HAB能降低近海海水质量、滨海景观，破坏滨海生态系统，从而能直接对滨海旅游业产生负面影响。</li>
           <li>破坏海洋生态系统<br>
-         密集覆盖特定海域的HAB能造成大量海洋生物的死亡，并且能创造出“死区”，从而导致直接威胁特定海域的生态安全</li>
+          密集覆盖特定海域的HAB能造成大量海洋生物的死亡，并且能创造出“死区”，从而导致直接威胁特定海域的生态安全</li>
          </ol>
       <h2>有害藻华的原因种类型</h2>
-    <p>甲藻、硅藻是中国近海HAB的主导原因种，蓝藻、褐藻和和微型藻等藻类也常是部分HAB的原因种。其中作为有毒有害原因种主导的HAB则能使海洋生态安全和社会经济遭受损失。</p>
-    
+    <p>甲藻、硅藻是中国近海HAB的主导原因种，着色鞭毛藻和蓝藻等藻类也常是部分HAB的原因种。其中作为有毒有害原因种主导的HAB则能使海洋生态安全和社会经济遭受损失。</p>
+    <ul>
+      <li>甲藻：东海原甲藻（无毒），米氏凯伦藻（有毒）。</li>
+      <li>硅藻：中肋骨条藻（无毒），伪柔弱拟菱形藻（有毒）。</li>
+      <li>着色鞭毛藻：海洋卡盾藻（有毒），抑食金球藻（有毒）。</li>
+      <li>蓝藻：汉氏束毛藻（无毒），铜锈微囊藻（有毒）。</li>
+     </ul> 
      </article>
    </main>
    <hr>
