--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
     <img src="封面2.jpg" alt="HABs in China">
   <article>
     <h2>项目介绍</h2>
-    <p>近年来，已成为中国近海突出的海洋生态灾害问题的有害藻华对人体健康、社会经济和海洋生态安全造成了威胁。定量化有害藻华的时空分布和其主要原因种的变化，探究有害藻华发生机理对改善和控制有害藻华事件发生至关重要。</p>
-    <p>基于《中国赤潮灾害调查与评价1933-2009》、《赤潮100问》书籍，1989-2018年的《中国海洋环境质量状况公报》、2000-2018年的《中国海洋灾害公报》、《中国东海海区海洋环境公报》、《浙江省海洋环境状况公报》、《舟山市海洋环境状况公报》等国家、各海区和各省市的海洋公报年等文献资料，本项目校对和补充了由余弋和黄睿整理的1933年以来的中国渤海、黄海、东海和南海的有害藻华事件，量化了其时空分布变化。
+         <p>近年来，已成为中国近海突出的海洋生态灾害问题的有害藻华对人体健康、社会经济和海洋生态安全造成了威胁。定量化有害藻华的时空分布和其主要原因种的变化，探究有害藻华发生机理对改善和控制有害藻华事件发生至关重要。</p>
+         <p>基于《中国赤潮灾害调查与评价1933-2009》、《赤潮100问》书籍，1989-2018年的《中国海洋环境质量状况公报》、2000-2018年的《中国海洋灾害公报》、《中国东海海区海洋环境公报》、《浙江省海洋环境状况公报》、《舟山市海洋环境状况公报》等国家、各海区和各省市的海洋公报年等文献资料，本项目校对和补充了由余弋和黄睿整理的1933年以来的中国渤海、黄海、东海和南海的有害藻华事件，量化了其时空分布变化。
       从《中国赤潮灾害调查与评价1933-2009》以及相关网站收集有记录的有害藻华相关的所有原因种的相关界门科目科属种的相关信息，统计各海域有害藻华的主要原因种的时空分布特征。</p>
-     <p>从NOAA等网站获取了各海域对应的流域氮、海洋表面温度、风速、降水等观测和再分析的数据。使用广义线性回归建立了各个海域的特定原因种的有害藻华频数变化的驱动模型以此计算出能在最大程度解释其变化的变量组合。</p>
-     <p>项目资助方桃花源生态保护基金会蓝色倡议专项，是专注于海洋保护的资助型项目，汇集了一批热心海洋保护的企业家和慈善家共同支持海洋保护工作。 将支持高校、科研院所和社会组织展开一线保护行动。在桃花源生态保护基金会的支持下，上海交大海洋学院周韫韬团队进行了中国近海有害藻华项目的工作。</p>
+         <p>从NOAA等网站获取了各海域对应的流域氮、海洋表面温度、风速、降水等观测和再分析的数据。使用广义线性回归建立了各个海域的特定原因种的有害藻华频数变化的驱动模型以此计算出能在最大程度解释其变化的变量组合。</p>
+         <p>项目资助方桃花源生态保护基金会蓝色倡议专项，是专注于海洋保护的资助型项目，汇集了一批热心海洋保护的企业家和慈善家共同支持海洋保护工作。 将支持高校、科研院所和社会组织展开一线保护行动。在桃花源生态保护基金会的支持下，上海交大海洋学院周韫韬团队进行了中国近海有害藻华项目的工作。</p>
     
     <h2>有害藻华的定义</h2>
-    <p> 有害藻华(Harmful algal Blooms, HAB)是在一定条件下，由海洋浮游微藻或大型藻类等快速增殖或聚集，导致海洋生态系统严重破坏或引起水色变化的一种灾害性海洋生态异常现象。 赤潮（Red tide）和褐潮（Green tide）和绿潮（Brown tide）是中国HAB的主要类型。HAB常发生于海洋近岸的河口、海湾等区域，东海、渤海和南海近海是中国HAB的热点地区。</p>
+         <p> 有害藻华(Harmful algal Blooms, HAB)是在一定条件下，由海洋浮游微藻或大型藻类等快速增殖或聚集，导致海洋生态系统严重破坏或引起水色变化的一种灾害性海洋生态异常现象。 赤潮（Red tide）和褐潮（Green tide）和绿潮（Brown tide）是中国HAB的主要类型。HAB常发生于海洋近岸的河口、海湾等区域，东海、渤海和南海近海是中国HAB的热点地区。</p>
      <ul>
-        <li>赤潮(红潮)是指在一定环境条件下，海洋中的浮游微藻、原生动物或细菌等在短时间内突发性链式增值和集聚导致的水色变红的灾难</li>
+        <li>赤潮(红潮)是指在一定环境条件下，海洋中的浮游微藻、原生动物或细菌等在短时间内突发性链式增值和集聚导致的水色变红的灾难。</li>
         <li>绿潮是海洋中一些大型绿藻（如浒苔）在一定环境条件下暴发性增殖或聚集达到某一水平，导致生态环境异常的一种现象。2008-2019年中国黄海海域持续发生浒苔灾害。</li>
         <li>褐潮（微微型藻藻华）是在一定环境条件下，海洋中的微微型浮游植物(以抑食金球藻为主)导致的水色变褐的灾难性海洋生态异常现象。该种HAB仅发生在美国、南非和中国附近海域。</li>
       </ul>
@@ -46,10 +46,10 @@
           <li>影响滨海景观<br>
           HAB能降低近海海水质量、滨海景观，破坏滨海生态系统，从而能直接对滨海旅游业产生负面影响。</li>
           <li>破坏海洋生态系统<br>
-          密集覆盖特定海域的HAB能造成大量海洋生物的死亡，并且能创造出“死区”，从而导致直接威胁特定海域的生态安全</li>
+          密集覆盖特定海域的HAB能造成大量海洋生物的死亡，并且能创造出“死区”，从而导致直接威胁特定海域的生态安全。</li>
          </ol>
       <h2>有害藻华的原因种类型</h2>
-    <p>甲藻、硅藻是中国近海HAB的主导原因种，着色鞭毛藻和蓝藻等藻类也常是部分HAB的原因种。其中作为有毒有害原因种主导的HAB则能使海洋生态安全和社会经济遭受损失。</p>
+          <p>甲藻、硅藻是中国近海HAB的主导原因种，着色鞭毛藻和蓝藻等藻类也常是部分HAB的原因种。其中作为有毒有害原因种主导的HAB则能使海洋生态安全和社会经济遭受损失。</p>
     <ul>
       <li>甲藻：东海原甲藻（无毒），米氏凯伦藻（有毒）。</li>
       <li>硅藻：中肋骨条藻（无毒），伪柔弱拟菱形藻（有毒）。</li>
