--- a/index.html
+++ b/index.html
@@ -30,11 +30,22 @@
     
     <h2>有害藻华的定义</h2>
          <p> 有害藻华(Harmful algal Blooms, HAB)是在一定条件下，由海洋浮游微藻或大型藻类等快速增殖或聚集，导致海洋生态系统严重破坏或引起水色变化的一种灾害性海洋生态异常现象。 赤潮（Red tide）和褐潮（Green tide）和绿潮（Brown tide）是中国HAB的主要类型。HAB常发生于海洋近岸的河口、海湾等区域，东海、渤海和南海近海是中国HAB的热点地区。</p>
+     <figure>
      <ul>
-        <li>赤潮(红潮)是指在一定环境条件下，海洋中的浮游微藻、原生动物或细菌等在短时间内突发性链式增值和集聚导致的水色变红的灾难。</li>
-        <li>绿潮是海洋中一些大型绿藻（如浒苔）在一定环境条件下暴发性增殖或聚集达到某一水平，导致生态环境异常的一种现象。2008-2019年中国黄海海域持续发生浒苔灾害。</li>
-        <li>褐潮（微微型藻藻华）是在一定环境条件下，海洋中的微微型浮游植物(以抑食金球藻为主)导致的水色变褐的灾难性海洋生态异常现象。该种HAB仅发生在美国、南非和中国附近海域。</li>
+        <li>
+  <img src="images/赤潮.jpg">
+  <figcaption>赤潮(红潮)是指在一定环境条件下，海洋中的浮游微藻、原生动物或细菌等在短时间内突发性链式增值和集聚导致的水色变红的灾难。</figcaption>
+        </li>
+        <li>
+        <img src="images/绿潮.png">
+        <figcaption>绿潮是海洋中一些大型绿藻（如浒苔）在一定环境条件下暴发性增殖或聚集达到某一水平，导致生态环境异常的一种现象。2008-2019年中国黄海海域持续发生浒苔灾害。</figcaption>
+        </li>
+        <li>
+        <img src="images/褐潮.jpg">
+     <figcaption>褐潮（微微型藻藻华）是在一定环境条件下，海洋中的微微型浮游植物(以抑食金球藻为主)导致的水色变褐的灾难性海洋生态异常现象。该种HAB仅发生在美国、南非和中国附近海域。</figcaption>
+        </li>
       </ul>
+      </figure>
     <h2>有害藻华的危害</h2>
        <ol>
           <li>大量海洋生物死亡<br>
