--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
       </ul>
     </nav>
    <main>
-    <img src="封面2.jpg" alt="HABs in China">
+    <img src="封面2.jpg" alt="HABs in China" 
+         width="1000"
+     height="400">
   <article>
     <h2>项目介绍</h2>
          <p>近年来，已成为中国近海突出的海洋生态灾害问题的有害藻华对人体健康、社会经济和海洋生态安全造成了威胁。定量化有害藻华的时空分布和其主要原因种的变化，探究有害藻华发生机理对改善和控制有害藻华事件发生至关重要。</p>
