--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
    </main>
    <hr>
 <footer>
-      <p>联系我们 xxxxxxx@stu.xmu.edu.cn</p>
+      <p>联系我们|xxxxxxx@stu.xmu.edu.cn</p>
     </footer>
   </body>
 </html>
