--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
       </ul>
     </nav>
    <main>
-    <img src="封面2.jpg" alt="HABs in China" width="1200" height="400">
-  <article>
-    <h2>项目介绍</h2>
+     <article>
+    <img src="donghai_new.jpg" alt="HABs in China" width="400" height="500">
+     <h2>中国有害藻华</h2>
+        <p>广泛存在于中国4大海域的有害藻华已经成为中国近海海域最严重的海洋灾害问题。常发生于海洋近岸的河口、海湾等区域的有害藻华给近海养殖业、人体健康和海洋生态系统安全带来不容忽视的损害，并且给中国海洋污染监测和质量带来巨大的挑战。由于有害藻华数据统计的分散性和有限性，中国近海有害藻华变化分布以及其发生变化机制的相关研究进展十分有限。</p>
+    </article>
+       <h2>项目介绍</h2>
          <p>近年来，已成为中国近海突出的海洋生态灾害问题的有害藻华对人体健康、社会经济和海洋生态安全造成了威胁。定量化有害藻华的时空分布和其主要原因种的变化，探究有害藻华发生机理对改善和控制有害藻华事件发生至关重要。</p>
          <p>基于《中国赤潮灾害调查与评价1933-2009》、《赤潮100问》书籍，1989-2018年的《中国海洋环境质量状况公报》、2000-2018年的《中国海洋灾害公报》、《中国东海海区海洋环境公报》、《浙江省海洋环境状况公报》、《舟山市海洋环境状况公报》等国家、各海区和各省市的海洋公报年等文献资料，本项目校对和补充了由余弋和黄睿整理的1933年以来的中国渤海、黄海、东海和南海的有害藻华事件，量化了其时空分布变化。
       从《中国赤潮灾害调查与评价1933-2009》以及相关网站收集有记录的有害藻华相关的所有原因种的相关界门科目科属种的相关信息，统计各海域有害藻华的主要原因种的时空分布特征。</p>
@@ -67,7 +70,6 @@
       <li>着色鞭毛藻：海洋卡盾藻（有毒），抑食金球藻（有毒）。</li>
       <li>蓝藻：汉氏束毛藻（无毒），铜锈微囊藻（有毒）。</li>
      </ul> 
-     </article>
    </main>
    <hr>
 <footer>
