--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </nav>
    <main>
      <article>
-    <img src="donghai_new.jpg" alt="HABs in China" width="400" height="300">
+    <img src="封面2.jpg" alt="HABs in China" width="500" height="300">
      <h2>中国有害藻华</h2>
         <p>广泛存在于中国4大海域的有害藻华已经成为中国近海海域最严重的海洋灾害问题。常发生于海洋近岸的河口、海湾等区域的有害藻华给近海养殖业、人体健康和海洋生态系统安全带来不容忽视的损害，并且给中国海洋污染监测和质量带来巨大的挑战。由于有害藻华数据统计的分散性和有限性，中国近海有害藻华变化分布以及其发生变化机制的相关研究进展十分有限。</p>
     </article>
