--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       从《中国赤潮灾害调查与评价1933-2009》以及相关网站收集有记录的有害藻华相关的所有原因种的相关界门科目科属种的相关信息，统计各海域有害藻华的主要原因种的时空分布特征。</p>
          <p>从NOAA等网站获取了各海域对应的流域氮、海洋表面温度、风速、降水等观测和再分析的数据。使用广义线性回归建立了各个海域的特定原因种的有害藻华频数变化的驱动模型以此计算出能在最大程度解释其变化的变量组合。</p>
          <p>项目资助方桃花源生态保护基金会蓝色倡议专项，是专注于海洋保护的资助型项目，汇集了一批热心海洋保护的企业家和慈善家共同支持海洋保护工作。 将支持高校、科研院所和社会组织展开一线保护行动。在桃花源生态保护基金会的支持下，上海交大海洋学院周韫韬团队进行了中国近海有害藻华项目的工作。</p>
-    
+    <article>
     <h2>有害藻华的定义</h2>
          <p> 有害藻华(Harmful algal Blooms, HAB)是在一定条件下，由海洋浮游微藻或大型藻类等快速增殖或聚集，导致海洋生态系统严重破坏或引起水色变化的一种灾害性海洋生态异常现象。 赤潮（Red tide）和褐潮（Green tide）和绿潮（Brown tide）是中国HAB的主要类型。HAB常发生于海洋近岸的河口、海湾等区域，东海、渤海和南海近海是中国HAB的热点地区。</p>
      <figure>
@@ -49,6 +49,8 @@
         </li>
       </ul>
       </figure>
+      </article>
+     <article>
     <h2>有害藻华的危害</h2>
        <ol>
           <li>大量海洋生物死亡<br>
@@ -62,6 +64,7 @@
           <li>破坏海洋生态系统<br>
           密集覆盖特定海域的HAB能造成大量海洋生物的死亡，并且能创造出“死区”，从而导致直接威胁特定海域的生态安全。</li>
          </ol>
+       </article>
       <h2>有害藻华的原因种类型</h2>
           <p>甲藻、硅藻是中国近海HAB的主导原因种，着色鞭毛藻和蓝藻等藻类也常是部分HAB的原因种。其中作为有毒有害原因种主导的HAB则能使海洋生态安全和社会经济遭受损失。</p>
     <ul>
