--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
          </ol>
        </article>
       <h2>有害藻华的原因种类型</h2>
-          <p>甲藻、硅藻是中国近海HAB的主导原因种，着色鞭毛藻和蓝藻等藻类也常是部分HAB的原因种。其中作为有毒有害原因种主导的HAB则能使海洋生态安全和社会经济遭受损失。</p>
+          <p>甲藻、硅藻是中国近海HAB的主导原因种，着色鞭毛藻和蓝藻等藻类也常是部分HAB的原因种,其中作为有毒有害原因种主导的HAB则能使海洋生态安全和社会经济遭受损失。中国近海HAB常见的原因种有：</p>
     <ul>
       <li>甲藻：东海原甲藻（无毒），米氏凯伦藻（有毒）。</li>
       <li>硅藻：中肋骨条藻（无毒），伪柔弱拟菱形藻（有毒）。</li>
