--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
     </header>
     <nav>
       <ul>
-        <li><a href="index.html">主页</a></li>
+        <li><a href="index.html" class="m1">主页</a></li>
         <li><a href="#">HAB的时空分布</a></li>
         <li><a href="#">HAB原因种的时空分布</a></li>
         <li><a href="#">HAB的环境影响因素</a></li>
       </ul>
     </nav>
+   <div class="panels">
+    <article class="m1-panel">
    <main>
      <article>
     <img src="封面2.jpg" alt="HABs in China" width="660" height="300">
@@ -78,4 +80,7 @@
       <p>联系我们|xxxxxxx@stu.xmu.edu.cn</p>
     </footer>
   </body>
+  </article>    
+     
+     
 </html>
