--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
     <nav>
       <ul>
-        <li><a href="index.html" class="m1">主页</a></li>
+        <li><a href="index.html" class="m1">首页</a></li>
         <li><a href="#">HAB的时空分布</a></li>
         <li><a href="#">HAB原因种的时空分布</a></li>
         <li><a href="#">HAB的环境影响因素</a></li>
