--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
    <div class="panels">
     <article class="m1-panel">
    <main>
+     <section>
      <article>
     <img src="封面2.jpg" alt="HABs in China" width="660" height="300">
         <p>广泛存在于中国渤海、黄海、东海和南海海域的有害藻华已经成为中国近海海域最严重的海洋灾害问题。常发生于中国海洋近岸的河口、海湾等区域的有害藻华能造成海洋生物伤亡，从而给近海养殖业、人体健康和海洋生态系统安全带来不容忽视的损害。近海爆发愈发频繁的有害藻华的给中国海洋污染监测和治理带来巨大的挑战。</p>
@@ -75,6 +76,7 @@
       <li>着色鞭毛藻：海洋卡盾藻（有毒），抑食金球藻（有毒）。</li>
       <li>蓝藻：汉氏束毛藻（无毒），铜锈微囊藻（有毒）。</li>
      </ul> 
+       </section>
    </main>
 <footer>
       <p>联系我们|xxxxxxx@stu.xmu.edu.cn</p>
