--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
          </ol>
        </article>
       <h2>有害藻华的原因种类型</h2>
-          <p>甲藻、硅藻是中国4大海区HAB的主导原因种，着色鞭毛藻和蓝藻等原因种也有零星分布,其中作为有毒有害原因种主导的HAB则能使海洋生态安全和社会经济遭受损失。由于不同藻种的生长环境有所差异，不同海区不同季节内的HAB的主导原因种比较多元化。中国常见的近海HAB原因种有：</p>
+          <p>甲藻、硅藻是中国4大海区HAB的主导原因种，着色鞭毛藻和蓝藻等原因种也有零星分布,其中作为有毒有害原因种主导的HAB则能使海洋生态安全和社会经济遭受损失。由于不同藻种的生长环境有所差异，不同海区不同季节内的HAB的主导原因种比较多元化。中国近海HAB常见的主导原因种有：</p>
     <ul>
       <li>甲藻：东海原甲藻、夜光藻（无毒），米氏凯伦藻（有毒）。</li>
       <li>硅藻：中肋骨条藻（无毒），伪柔弱拟菱形藻（有毒）。</li>
@@ -84,7 +84,7 @@
      
      <div class="f2">
         <p>1933年至今，中国4大海域的HAB频繁发生，其中东海是中国HAB爆发最严重的海域。1933-2018年期间，东海海域共发生了929次HAB,累计面积超过18 km<sup>2</sup>，HAB产生的累计直接经济损失则高达27亿元。</p>
-       <br>
+       <hr>
        <article>
        <h2>东海有害藻华的时空分布</h2>
        <img src="donghai_new.jpg" alt="HABs in China" width="450" height="300">
