--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
        <article>
        <h2>东海有害藻华的分布特征</h2>
        <img src="不同等级HAB的分布.png" alt="HABs in China" width="500" height="300">
-        <p>相比较与大中型HAB，小型HAB是东海HAB的频数变化分布最为一致，而大型HAB的年面积则与东海总体的HAB面积变化的相关性更高。小型HAB的频数占东海总体的HAB的50%以上，并且造成经济损失93%的HAB为中小型HAB。</p>
+        <p>相比较与大中型HAB，小型HAB是东海HAB的频数变化分布最为一致，而大型HAB的年面积则与东海总体的HAB面积变化的相关性更高。</p>
+         <p>小型HAB的频数占东海总体的HAB的50%以上，并且造成经济损失93%的HAB为中小型HAB。</p>
        </article>
        
        <article>
