--- a/index.html
+++ b/index.html
@@ -79,6 +79,16 @@
       <li>蓝藻：汉氏束毛藻（无毒），铜锈微囊藻（有毒）。</li>
      </ul> 
          </article>  
+     
+      <aside> <!-- 侧边栏在主内容右侧 -->
+        <h2>在此页面</h2>
+         <ul>
+          <li><a href="#">项目介绍</a></li>
+          <li><a href="#">有害藻华的定义</a></li>
+          <li><a href="#">有害藻华的危害</a></li>
+          <li><a href="#">有害藻华的原因种类型</a></li>
+        </ul>
+      </aside>
        </section>
       </div>  
      
