--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+  <html>
   <head>
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+SC" rel="stylesheet">
     <link href="fig.css" rel="stylesheet">
@@ -22,6 +22,15 @@
    <div class="f1">
    <main>
      <section>
+        <aside> <!-- 侧边栏在主内容右侧 -->
+        <h2>在此页面</h2>
+         <ul>
+          <li><a href="#m1">项目介绍</a></li>
+          <li><a href="#m2">有害藻华的定义</a></li>
+          <li><a href="#m3">有害藻华的危害</a></li>
+          <li><a href="#m4">有害藻华的原因种类型</a></li>
+        </ul>
+      </aside>
      <article>
     <img src="封面2.jpg" alt="HABs in China" width="600" height="300">
         <p>广泛存在于中国渤海、黄海、东海和南海海域的4大海域的有害藻华已经成为中国近海海域最严重的海洋灾害问题。</p>
@@ -41,15 +50,15 @@
      <figure>
      <ul>
         <li>
-  <img src="赤潮.jpg" width="350" height="300">
+  <img src="赤潮.jpg" width="310" height="300">
   <figcaption>赤潮(红潮)是指在一定环境条件下，海洋中的浮游微藻、原生动物或细菌等在短时间内突发性链式增值和集聚导致的水色变红的灾难。</figcaption>
         </li>
         <li>
-        <img src="绿潮.png" width="350" height="300">
+        <img src="绿潮.png" width="310" height="300">
         <figcaption>绿潮是海洋中一些大型绿藻（如浒苔）在一定环境条件下暴发性增殖或聚集达到某一水平，导致生态环境异常的一种现象。2008-2019年中国黄海海域持续发生浒苔灾害。</figcaption>
         </li>
         <li>
-        <img src="褐潮.jpg" width="350" height="300">
+        <img src="褐潮.jpg" width="310" height="300">
      <figcaption>褐潮（微微型藻藻华）是在一定环境条件下，海洋中的微微型浮游植物(以抑食金球藻为主)导致的水色变褐的灾难性海洋生态异常现象。该种HAB仅发生在美国、南非和中国附近海域。</figcaption>
         </li>
       </ul>
@@ -79,16 +88,6 @@
       <li>蓝藻：汉氏束毛藻（无毒），铜锈微囊藻（有毒）。</li>
      </ul> 
          </article>  
-     
-      <aside> <!-- 侧边栏在主内容右侧 -->
-        <h2>在此页面</h2>
-         <ul>
-          <li><a href="#m1">项目介绍</a></li>
-          <li><a href="#m2">有害藻华的定义</a></li>
-          <li><a href="#m3">有害藻华的危害</a></li>
-          <li><a href="#m4">有害藻华的原因种类型</a></li>
-        </ul>
-      </aside>
        </section>
       </div>  
      
