--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </li>
       </ul>
       </figure>
-         <article>
+         </article>
      <article id="m3">
     <h2>有害藻华的危害</h2>
        <ol>
