--- a/index.html
+++ b/index.html
@@ -172,8 +172,11 @@
            </article>
           <article id="g3">
        <h2>东海HAB的有毒有害原因种分布</h2>
-            <p>21世纪后，东海HAB的原因种开始多样化，并在2003年达到峰值(20种)，与此同时，HAB的原因种种类的有毒有害藻种比例在统计上有显著增加的趋势(p<0.05)。从有毒有害原因种的年际分布看，米氏凯伦藻则是该海域绝大大数年份的主导有毒有害原因种，此外赤潮异弯藻和红色赤潮藻也是部分年份的主导有毒有害的原因种。从其季节分布来看，米氏凯伦藻其主导着6-9月份的有毒有害的HAB，并且给东海沿岸省市带来了严重的经济损失。</p>
-           </div> 
+            <img src="东海有害赤潮种.png" width="500" height="300">
+            <p>有毒有害原因种的HAB集中出现于21世纪后，故2000年前的各个海域的有毒有害藻种仅零星分布。21世纪后，东海HAB的原因种开始多样化，并在2003年达到峰值(20种)，随后开始下降，但在2003-2009年期间的原因种都在10种以上。HAB的原因种种类的有毒有害藻种比例在统计上有显著增加的趋势(p<0.05),并且有毒有害原因种主导的HAB的地理范围在不断扩大。</P>
+             <P>从有毒有害原因种的年际分布看，米氏凯伦藻则是该海域绝大大数年份的主导有毒有害原因种，此外赤潮异弯藻和红色赤潮藻也是部分年份的主导有毒有害的原因种。从其季节分布来看，米氏凯伦藻其主导着6-9月份的有毒有害的HAB，并且给东海沿岸省市带来了严重的经济损失。然而，赤潮异弯藻对5月份的有毒有害的HAB影响较大，其他月份并未出现频数超过2次相同有毒有害原因种主导额HAB。</p>
+           </article>
+            </div> 
    </main>
 <footer>
       <p>联系我们|xxxxxxx@stu.xmu.edu.cn</p>
