--- a/index.html
+++ b/index.html
@@ -176,7 +176,22 @@
             <p>有毒有害原因种的HAB集中出现于21世纪后，故2000年前的各个海域的有毒有害藻种仅零星分布。21世纪后，东海HAB的原因种开始多样化，并在2003年达到峰值(20种)，随后开始下降，但在2003-2009年期间的原因种都在10种以上。HAB的原因种种类的有毒有害藻种比例在统计上有显著增加的趋势(p<0.05),并且有毒有害原因种主导的HAB的地理范围在不断扩大。</P>
              <P>从有毒有害原因种的年际分布看，米氏凯伦藻则是该海域绝大大数年份的主导有毒有害原因种，此外赤潮异弯藻和红色赤潮藻也是部分年份的主导有毒有害的原因种。从其季节分布来看，米氏凯伦藻其主导着6-9月份的有毒有害的HAB，并且给东海沿岸省市带来了严重的经济损失。然而，赤潮异弯藻对5月份的有毒有害的HAB影响较大，其他月份并未出现频数超过2次相同有毒有害原因种主导额HAB。</p>
            </article>
-            </div> 
+            </div>
+         <div class="f4">
+      <aside> <!-- 侧边栏在主内容右侧 -->
+        <h2>在此页面</h2>
+         <ul>
+          <li><a href="#h1">东海HAB的环境特征</a></li>
+          <li><a href="#h2">主导原因种HAB的环境特征</a></li>
+          <li><a href="#h3">东海HAB的有毒有害原因种分布</a></li>
+        </ul>
+      </aside>    
+       <article id="h1">
+       <h2>东海HAB的环境特征</h2>
+          <img src="东海环境.png" width="500" height="300">
+         <p>1981年以来，海洋表面温度(SST)的变化对东海海域的HAB的产生和消亡有重要影响，其中70%的所有有具体时空数据信息的HAB经历了SST升温，62%的HAB则在SST升温中消亡。</p>
+         <p>对于东海HAB爆发时的海洋环境因素来说，温度和风速风向对大部分的HAB的爆发息息相关。其中，71%的东海海域的HAB的主导风向微弱的南风，并且88%的8月后的HAB都经历了南风。此外，73%的HAB的SST在20℃以上，并且7-10月的HAB的SST都高于21℃，这表明较高的SST对该海域的HAB持续发展有重要的作用。对于集中发生于5-7月的有毒有害的HAB来说，79%的HAB的SST甚至都高于20℃。</p>
+         </div>
    </main>
 <footer>
       <p>联系我们|xxxxxxx@stu.xmu.edu.cn</p>
