--- a/index.html
+++ b/index.html
@@ -13,11 +13,14 @@
    <section class="info-web">
        <main>
     <nav>
+       <span class="cd-marker item-1"></span>
       <ul>
-        <li><a href=" " class="m1">首页</a></li>
-        <li><a href=" ">HAB的时空分布</a></li>
-        <li><a href=" ">HAB原因种的时空分布</a></li>
-        <li><a href=" ">HAB的环境影响因素</a></li>
+        <li class="selected">
+          <a href="#0" class="a1">首页</a>
+        </li>
+        <li><a href="#0" class="a2">HAB的时空分布</a></li>
+        <li><a href="#0" class="a3">HAB原因种的时空分布</a></li>
+        <li><a href="#0" class="a4">HAB的环境影响因素</a></li>
       </ul>
     </nav>
      
@@ -196,7 +199,8 @@
 <footer>
       <p>联系我们|xxxxxxx@stu.xmu.edu.cn</p>
     </footer>
+         
   </section>
   </body>  
-   
+   <script src="main.js"></script>
    </html>
