--- a/index.html
+++ b/index.html
@@ -226,6 +226,6 @@ function setTabHandler(tab, tabPos) {
 }
 
                </script>
-           <footer>联系我们、xxxxxxxxedu.cn </footer>
+           <footer>联系我们|xxxxxxxxedu.cn </footer>
            </body>
          <html>
