--- a/index.html
+++ b/index.html
@@ -202,30 +202,7 @@
            </div>
            </div>
            <main>
-             <script>
-               var panels = document.querySelectorAll('.info-web div');
-
-for(i = 0; i < tabs.length; i++) {
-  var tab = tabs[i];
-}
-
-function setTabHandler(tab, tabPos) {
-  tab.onclick = function() {
-    for(i = 0; i < tabs.length; i++) {
-      tabs[i].className = '';
-    }
-
-    tab.className = 'a1';
-
-    for(i = 0; i < b1.length; i++) {
-      b1[i].className = '';
-    }
-
-    b1[tabPos].className = 'f1';
-  }
-}
-
-               </script>
+             <script src="main.js"></script>
            <footer>联系我们|xxxxxxxxedu.cn </footer>
            </body>
          <html>
