--- a/HAB1.html
+++ b/HAB1.html
@@ -1,82 +1,80 @@
+<!DOCTYPE html>
 <html>
-					<head>
-						<meta charset="utf-8">
-						<meta http-equiv="X-UA-Compatible" content="IE=edge">
-						<title></title>
-						<link rel="stylesheet" href="">
-						<script src="http://libs.baidu.com/jquery/1.10.2/jquery.min.js"></script>
-						<style>
-							.nav {
-								overflow: hidden;
-								text-align: center;
-								background-color: #f4f4f4;
-							}
-							.nav li {
-								float: left;
-								padding: 5px;
-								width: 50px;
-								color: #666;
-								list-style: none;
-								border-left: 1px solid #f4f4f4;
-								cursor: pointer;
-							}
-							.nav li:hover,.selected {
-								background-color:#ecebeb;
-								border-left: 1px solid #ecebeb;
-							}
-							.content{
-								border: 1px solid #f4f4f4;
-								height: 80px;
-								padding: 10px;
-								overflow: hidden;
-							}
-						</style>
-					</head>
-					<body>
-						<ul class="nav">
-							<li class="selected">姓名</li>
-							<li>年龄</li>
-							<li>性别</li>
-							<li>班级</li>
-						</ul>
-						<div class="content">
-							<div class="list ">
-								<p>姓名：</p>
-								<p>&nbsp;&nbsp;&nbsp;黎明</p>
-							</div>
-							<div  class="list">
-								<p>年龄：</p>
-								<p>&nbsp;&nbsp;&nbsp;22</p>
-							</div>
-							<div  class="list">
-								<p>性别：</p>
-								<p>&nbsp;&nbsp;&nbsp;男</p>
-							</div>
-							<div  class="list">
-								<p>班级：</p>
-								<p>&nbsp;&nbsp;&nbsp;商务班级</p>
-							</div>
-						</div>
-						<script>
-								$(function(){
-									//获取点击事件的对象
-									$(".nav li").click(function(){
-										//获取要显示或隐藏的对象
-										var divShow = $(".content").children('.list');
-										//判断当前对象是否被选中，如果没选中的话进入if循环
-										if (!$(this).hasClass('selected')) {
-											//获取当前对象的索引
-											var index = $(this).index();
-											//当前对象添加选中样式并且其同胞移除选中样式；
-											$(this).addClass('selected').siblings('li').removeClass('selected');
-											//索引对应的div块显示
-											$(divShow[index]).show();
-											//索引对应的div块的同胞隐藏
-											$(divShow[index]).siblings('.list').hide();
-										}
-									});
-								});
-								
-						</script>
-					</body>
-					</html>
+<head lang="en">
+  <meta charset="UTF-8">
+  <title>www.jb51.net 脚本之家</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+    }
+    ul {
+      list-style-type: none;
+    }
+    .box {
+      width: 400px;
+      height: 300px;
+      border: 1px solid #ccc;
+      margin: 100px auto;
+      overflow: hidden;
+    }
+    .hd {
+      height: 45px;
+    }
+    .hd span {
+      display: inline-block;
+      width: 90px;
+      background-color: pink;
+      line-height: 45px;
+      text-align: center;
+      cursor: pointer;
+    }
+    .hd span.current {
+      background-color: yellowgreen;
+    }
+    .bd li {
+      height: 255px;
+      background-color: yellowgreen;
+      display: none;
+    }
+    .bd li.current {
+      display: block;
+      font-size: 36px;
+    }
+  </style>
+</head>
+<body>
+<div class="box" id="box">
+  <div class="hd">
+    <span class="current">体育</span>
+    <span>娱乐</span>
+    <span>新闻</span>
+    <span>综合</span>
+  </div>
+  <div class="bd">
+    <ul>
+      <li class="current">我是体育模块</li>
+      <li>我是娱乐模块</li>
+      <li>我是新闻模块</li>
+      <li>我是综合模块</li>
+    </ul>
+  </div>
+</div>
+<script>
+  var box = document.getElementById("box");
+  var spans = box.getElementsByTagName("span");
+  var lis = box.getElementsByTagName("li");
+  for (var i = 0; i < spans.length; i++) {
+    spans[i].aaa = i;
+    spans[i].onclick = function () {
+      for (var i = 0; i < spans.length; i++) {
+        spans[i].className = "";
+        lis[i].className = "";
+      }
+      this.className = "current";
+      lis[this.aaa].className = "current";
+    }
+  }
+</script>
+</body>
+</html>
