--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
        <main>
     <nav class="nav1">
-          <li class="selected"><a href="">首页</a>
+          <li class="b1"><a href="">首页</a>
         </li>
         <li><a href="">HAB的时空分布</a></li>
         <li><a href="">HAB原因种的时空分布</a></li>
