--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   </head> 
  <body>
   <header>
-      <h1>中国近海有害藻华z</h1>
+      <h1>中国近海有害藻华a</h1>
     </header>
        <main>
     <nav class="nav1">
-          <li class="b1"><a href="">首页</a>
+          <li class="f1"><a href="">首页</a>
         </li>
         <li><a href="">HAB的时空分布</a></li>
         <li><a href="">HAB原因种的时空分布</a></li>
@@ -193,7 +193,7 @@
            </div>
            <main>
         <script>
-	  var box = document.getElementById("nav");
+	  var box = document.getElementById("nav1");
 	  var spans = box.getElementsByTagName("nav li a");
 	  var lis = box.getElementsByTagName("f1");
 	  for (var i = 0; i < spans.length; i++) {
