--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
   </head> 
  <body>
   <header>
-      <h1>中国近海有害藻华a</h1>
+      <h1>中国近海有害藻华b</h1>
     </header>
        <main>
+	 <div class="a1">       
     <nav class="nav1">
           <li class="f1"><a href="">首页</a>
         </li>
@@ -191,9 +192,10 @@
          <p>对于东海HAB爆发时的海洋环境因素来说，温度和风速风向对大部分的HAB的爆发息息相关。其中，71%的东海海域的HAB的主导风向微弱的南风，并且88%的8月后的HAB都经历了南风。此外，73%的HAB的SST在20℃以上，并且7-10月的HAB的SST都高于21℃，这表明较高的SST对该海域的HAB持续发展有重要的作用。对于集中发生于5-7月的有毒有害的HAB来说，79%的HAB的.</p>
            </div>
            </div>
+	      </div>
            <main>
         <script>
-	  var box = document.getElementById("nav1");
+	  var box = document.getElementById("a1");
 	  var spans = box.getElementsByTagName("nav li a");
 	  var lis = box.getElementsByTagName("f1");
 	  for (var i = 0; i < spans.length; i++) {
