--- a/index.html
+++ b/index.html
@@ -195,9 +195,9 @@
 	      </div>
            <main>
         <script>
-	  var box = document.getElementById("a1");
-	  var spans = document.querySelectorAll("nav1 li");
-	  var lis = document.querySelectorAll("section");
+	  var box = $('.a1');
+	  var spans = $('.nav1 li');
+	  var lis = $('.section');
 	  for (var i = 0; i < spans.length; i++) {
 	    spans[i].aaa = i;
 	    spans[i].onclick = function () {
