--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head> 
  <body>
   <header>
-      <h1>中国近海有害藻华 A</h1>
+      <h1>中国近海有害藻华 B</h1>
     </header>
        <main>  
 	 <section class="cd-hero">	
@@ -16,7 +16,7 @@
     <nav>
 	     <span class="cd-marker item-1"></span>
 	    <ul>
-          <li class="selected"><a class="glyphicon glyphicon-user" href="#0"></a>首页</li>
+          <li class="selected"><a class="glyphicon glyphicon-user" href="#0">首页</a></li>
         <li><a class="glyphicon glyphicon-fire" href="#0">HAB的时空分布</a></li>
         <li><a class="glyphicon glyphicon-film" href="#0">HAB原因种的时空分布</a></li>
         <li><a class="glyphicon glyphicon-record" href="#0">HAB的环境影响因素</a></li>
