--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </ul>
       </aside>
        
-     <article>
+     <article id="e1">
     <img src="封面2.jpg" alt="HABs in China" width="600" height="300">
         <p>广泛存在于中国渤海、黄海、东海和南海海域的4大海域的有害藻华已经成为中国近海海域最严重的海洋灾害问题。</p>
          <p>常发生于中国海洋近岸的河口、海湾等区域的有害藻华能造成大量的海洋生物伤亡，从而给近海养殖业、人体健康和海洋生态系统安全带来不容忽视的损害。近年来，全球气候变暖和人为污染物排放量显著增加的背景下，近海爆发愈发频繁的有害藻华的给中国海洋污染监测和治理带来巨大的挑战。</p>
