--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </nav>
 	</div>
      
-      <div class="cd-hero-slider autoplay">
+      <u1 class="cd-hero-slider autoplay">
       <li class="selected">
        
         <aside> <!-- 侧边栏在主内容右侧 -->
@@ -195,7 +195,7 @@
          <p>对于东海HAB爆发时的海洋环境因素来说，温度和风速风向对大部分的HAB的爆发息息相关。其中，71%的东海海域的HAB的主导风向微弱的南风，并且88%的8月后的HAB都经历了南风。此外，73%的HAB的SST在20℃以上，并且7-10月的HAB的SST都高于21℃，这表明较高的SST对该海域的HAB持续发展有重要的作用。对于集中发生于5-7月的有毒有害的HAB来说，79%的HAB的.</p>
            <article>
 	       </li>
-           </div>
+           </u1>
 	      </section>
            <main>
 		<script src="main.js"></script>   
