--- a/HAB1.html
+++ b/HAB1.html
@@ -93,11 +93,13 @@
 <body>
 
 <section class="info-box">
+  <nav>
   <ul>
-    <li><a href="#" class="active">Tab 1</a></li>
+    <li><a href="#" class="active">项目</a></li>
     <li><a href="#">Tab 2</a></li>
     <li><a href="#">Tab 3</a></li>
   </ul>
+    </nav>
   <div class="panels">
     <article class="active-panel">
       <h2>The first tab</h2>
