--- a/HAB1.html
+++ b/HAB1.html
@@ -103,7 +103,16 @@
   <div class="panels">
     <article class="active-panel">
       <h2>The first tab</h2>
-
+ <aside> <!-- 侧边栏在主内容右侧 -->
+        <h2>在此页面</h2>
+         <ul>
+          <li><a href="#m1">项目介绍</a></li>
+          <li><a href="#m2">有害藻华的定义</a></li>
+          <li><a href="#m3">有害藻华的危害</a></li>
+          <li><a href="#m4">有害藻华的原因种类型</a></li>
+        </ul>
+      </aside>
+      <img src="封面2.jpg" alt="HABs in China" width="300" height="300">
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque turpis nibh, porttitor nec venenatis eu, pulvinar in augue. Vestibulum et orci scelerisque, vulputate tellus quis, lobortis dui. Vivamus varius libero at ipsum mattis efficitur ut nec nisl. Nullam eget tincidunt metus. Donec ultrices, urna maximus consequat aliquet, dui neque eleifend lorem, a auctor libero turpis at sem. Aliquam ut porttitor urna. Nulla facilisi.</p>
     </article>
     <article>
