--- a/HAB1.html
+++ b/HAB1.html
@@ -96,7 +96,7 @@
   <nav>
   <ul>
     <li><a href="#" class="active">项目</a></li>
-    <li><a href="#">Tab 2</a></li>
+    <li><a href="#">原因</a></li>
     <li><a href="#">Tab 3</a></li>
   </ul>
     </nav>
@@ -139,7 +139,7 @@
       </ol>
     </article>
           </div>
-  </div>
+  </section>
 </section>
 
 <script>
