--- a/HAB1.html
+++ b/HAB1.html
@@ -97,11 +97,10 @@
   <ul>
     <li><a href="#" class="active">项目</a></li>
     <li><a href="#">原因</a></li>
-    <li><a href="#">Tab 3</a></li>
+    <li><a href="#">创新 3</a></li>
   </ul>
     </nav>
 	
-  <section class="panels">
     <div class="active-panel">
        <aside> <!-- 侧边栏在主内容右侧 -->
         <h2>在此页面</h2>
@@ -119,6 +118,7 @@
           <p>由于21世纪之前的中国近海有害藻华数据统计资料的分散性和有限性，中国近海有害藻华年际变化分布以及其发生变化机制的相关研究进展十分有限。</p>
     </article>
 	    </div>
+	  
     <div>
       <article>
       <h2>The second tab</h2>
@@ -126,12 +126,11 @@
       <p>This tab hasn't got any Lorem Ipsum in it. But the content isn't very exciting all the same.</p>
     </article>
       </div>
+	  
         <div>
     <article>
       <h2>The third tab</h2>
-
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque turpis nibh, porttitor nec venenatis eu, pulvinar in augue. And now an ordered list: how exciting!</p>
-
       <ol>
         <li>dui neque eleifend lorem, a auctor libero turpis at sem.</li>
         <li>Aliquam ut porttitor urna.</li>
@@ -140,7 +139,6 @@
     </article>
           </div>
   </section>
-</section>
 
 <script>
 
