--- a/HAB1.html
+++ b/HAB1.html
@@ -88,62 +88,45 @@
 
 
 
-  </style>
+</style>
 </head>
 <body>
 
 <section class="info-box">
-  <nav>
   <ul>
-    <li><a href="#" class="active">项目</a></li>
-    <li><a href="#">原因</a></li>
-    <li><a href="#">创新 3</a></li>
+    <li><a href="#" class="active">Tab 1</a></li>
+    <li><a href="#">Tab 2</a></li>
+    <li><a href="#">Tab 3</a></li>
   </ul>
-    </nav>
-	
-    <div class="active-panel">
-       <aside> <!-- 侧边栏在主内容右侧 -->
-        <h2>在此页面</h2>
-         <ul>
-          <li><a href="#m1">项目介绍</a></li>
-          <li><a href="#m2">有害藻华的定义</a></li>
-          <li><a href="#m3">有害藻华的危害</a></li>
-          <li><a href="#m4">有害藻华的原因种类型</a></li>
-        </ul>
-      </aside>  
-     <article class="e1">
-    <img src="封面2.jpg" alt="HABs in China" width="600" height="300">
-        <p>广泛存在于中国渤海、黄海、东海和南海海域的4大海域的有害藻华已经成为中国近海海域最严重的海洋灾害问题。</p>
-         <p>常发生于中国海洋近岸的河口、海湾等区域的有害藻华能造成大量的海洋生物伤亡，从而给近海养殖业、人体健康和海洋生态系统安全带来不容忽视的损害。近年来，全球气候变暖和人为污染物排放量显著增加的背景下，近海爆发愈发频繁的有害藻华的给中国海洋污染监测和治理带来巨大的挑战。</p>
-          <p>由于21世纪之前的中国近海有害藻华数据统计资料的分散性和有限性，中国近海有害藻华年际变化分布以及其发生变化机制的相关研究进展十分有限。</p>
+  <div class="panels">
+    <article class="active-panel">
+      <h2>The first tab</h2>
+
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque turpis nibh, porttitor nec venenatis eu, pulvinar in augue. Vestibulum et orci scelerisque, vulputate tellus quis, lobortis dui. Vivamus varius libero at ipsum mattis efficitur ut nec nisl. Nullam eget tincidunt metus. Donec ultrices, urna maximus consequat aliquet, dui neque eleifend lorem, a auctor libero turpis at sem. Aliquam ut porttitor urna. Nulla facilisi.</p>
     </article>
-	    </div>
-	  
-    <div>
-      <article>
+    <article>
       <h2>The second tab</h2>
 
       <p>This tab hasn't got any Lorem Ipsum in it. But the content isn't very exciting all the same.</p>
     </article>
-      </div>
-	  
-        <div>
     <article>
       <h2>The third tab</h2>
+
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque turpis nibh, porttitor nec venenatis eu, pulvinar in augue. And now an ordered list: how exciting!</p>
+
       <ol>
         <li>dui neque eleifend lorem, a auctor libero turpis at sem.</li>
         <li>Aliquam ut porttitor urna.</li>
         <li>Nulla facilisi</li>
       </ol>
     </article>
-          </div>
-  </section>
+  </div>
+</section>
 
 <script>
 
 var tabs = document.querySelectorAll('.info-box li a');
-var panels = document.querySelectorAll('.info-box div');
+var panels = document.querySelectorAll('.info-box article');
 
 for(i = 0; i < tabs.length; i++) {
   var tab = tabs[i];
