--- a/HAB1.html
+++ b/HAB1.html
@@ -94,15 +94,43 @@
 
 <section class="info-box">
   <ul>
-    <li><a href="#" class="active">Tab 1</a></li>
-    <li><a href="#">Tab 2</a></li>
-    <li><a href="#">Tab 3</a></li>
+    <li><a href=" " class="active">Tab 1</a></li>
+    <li><a href=" ">Tab 2</a></li>
+    <li><a href=" ">Tab 3</a></li>
   </ul>
   <div class="panels">
     <article class="active-panel">
-      <h2>The first tab</h2>
-
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque turpis nibh, porttitor nec venenatis eu, pulvinar in augue. Vestibulum et orci scelerisque, vulputate tellus quis, lobortis dui. Vivamus varius libero at ipsum mattis efficitur ut nec nisl. Nullam eget tincidunt metus. Donec ultrices, urna maximus consequat aliquet, dui neque eleifend lorem, a auctor libero turpis at sem. Aliquam ut porttitor urna. Nulla facilisi.</p>
+<aside> <!-- 侧边栏在主内容右侧 -->
+        <h2>在此页面</h2>
+         <ul>
+          <li><a href="#m1">项目介绍</a></li>
+          <li><a href="#m2">有害藻华的定义</a></li>
+          <li><a href="#m3">有害藻华的危害</a></li>
+          <li><a href="#m4">有害藻华的原因种类型</a></li>
+        </ul>
+      </aside>
+     <img src="封面2.jpg" alt="HABs in China" width="600" height="300">
+        <p>广泛存在于中国渤海、黄海、东海和南海海域的4大海域的有害藻华已经成为中国近海海域最严重的海洋灾害问题。</p>
+         <p>常发生于中国海洋近岸的河口、海湾等区域的有害藻华能造成大量的海洋生物伤亡，从而给近海养殖业、人体健康和海洋生态系统安全带来不容忽视的损害。近年来，全球气候变暖和人为污染物排放量显著增加的背景下，近海爆发愈发频繁的有害藻华的给中国海洋污染监测和治理带来巨大的挑战。</p>
+          <p>由于21世纪之前的中国近海有害藻华数据统计资料的分散性和有限性，中国近海有害藻华年际变化分布以及其发生变化机制的相关研究进展十分有限。</p>
+       <h2>有害藻华的定义</h2>
+         <p> 有害藻华(Harmful algal Blooms, HAB)是在一定条件下，由海洋浮游微藻或大型藻类等快速增殖或聚集，导致海洋生态系统严重破坏或引起水色变化的一种灾害性海洋生态异常现象。 赤潮（Red tide）和褐潮（Green tide）和绿潮（Brown tide）是中国HAB的主要类型。HAB常发生于东海、渤海和南海海洋近岸的河口、海湾等区域，近海,其中渤海湾、长江口和珠江口等海域是中国HAB的热点地区。</p>
+     <figure>
+     <ul>
+        <li>
+  <img src="赤潮.jpg" width="310" height="300">
+  <figcaption>赤潮(红潮)是指在一定环境条件下，海洋中的浮游微藻、原生动物或细菌等在短时间内突发性链式增值和集聚导致的水色变红的灾难。</figcaption>
+        </li>
+        <li>
+        <img src="绿潮.png" width="310" height="300">
+        <figcaption>绿潮是海洋中一些大型绿藻（如浒苔）在一定环境条件下暴发性增殖或聚集达到某一水平，导致生态环境异常的一种现象。2008-2019年中国黄海海域持续发生浒苔灾害。</figcaption>
+        </li>
+        <li>
+        <img src="褐潮.jpg" width="310" height="300">
+     <figcaption>褐潮（微微型藻藻华）是在一定环境条件下，海洋中的微微型浮游植物(以抑食金球藻为主)导致的水色变褐的灾难性海洋生态异常现象。该种HAB仅发生在美国、南非和中国附近海域。</figcaption>
+        </li>
+      </ul>
+      </figure>
     </article>
     <article>
       <h2>The second tab</h2>
