--- a/HAB1.html
+++ b/HAB1.html
@@ -94,9 +94,9 @@
 
 <section class="info-box">
   <ul>
-    <li><a href=" " class="active">Tab 1</a></li>
-    <li><a href=" ">Tab 2</a></li>
-    <li><a href=" ">Tab 3</a></li>
+    <li><a href="#" class="active">Tab 1</a></li>
+    <li><a href="#">Tab 2</a></li>
+    <li><a href="#">Tab 3</a></li>
   </ul>
   <div class="panels">
     <article class="active-panel">
