--- a/HAB1.html
+++ b/HAB1.html
@@ -94,11 +94,12 @@
 
 <section class="info-box">
   <ul>
-    <li><a href="#" class="active">Tab 1</a></li>
-    <li><a href="#">Tab 2</a></li>
+    <li><a href="#" class="active">首页</a></li>
+    <li><a href="#">Tab 345</a></li>
     <li><a href="#">Tab 3</a></li>
   </ul>
-  <div class="panels">
+ 
+  <section class="panels">
     <article class="active-panel">
 <aside> <!-- 侧边栏在主内容右侧 -->
         <h2>在此页面</h2>
@@ -148,7 +149,7 @@
         <li>Nulla facilisi</li>
       </ol>
     </article>
-  </div>
+     </section>
 </section>
 
 <script>
