--- a/HAB1.html
+++ b/HAB1.html
@@ -96,7 +96,7 @@
   <ul>
     <li><a href="#" class="active">首页</a></li>
     <li><a href="#">Tab 345</a></li>
-    <li><a href="#">Tab 3</a></li>
+    <li><a href="#">Tab haha</a></li>
   </ul>
  
   <section class="panels">
