--- a/HAB1.html
+++ b/HAB1.html
@@ -95,7 +95,7 @@
 <section class="info-box">
   <ul>
     <li><a href="#" class="active">首页</a></li>
-    <li><a href="#">分布特征</a></li>
+    <li><a href="#">分布特征2</a></li>
     <li><a href="#">Tab haha</a></li>
   </ul>
  
@@ -154,7 +154,7 @@
 
 <script>
 
-var tabs = document.querySelectorAll('.info-box nav li a');
+var tabs = document.querySelectorAll('.info-box nav a');
 var panels = document.querySelectorAll('.info-box div');
 
 for(i = 0; i < tabs.length; i++) {
