--- a/HAB1.html
+++ b/HAB1.html
@@ -154,7 +154,7 @@
 
 <script>
 
-var tabs = document.querySelectorAll('.info-box nav a');
+var tabs = document.querySelectorAll('.info-box li a');
 var panels = document.querySelectorAll('.info-box div');
 
 for(i = 0; i < tabs.length; i++) {
