--- a/HAB1.html
+++ b/HAB1.html
@@ -95,7 +95,7 @@
 <section class="info-box">
   <ul>
     <li><a href="#" class="active">首页</a></li>
-    <li><a href="#">分布特征2</a></li>
+    <li><a href="#">分布特征</a></li>
     <li><a href="#">Tab haha</a></li>
   </ul>
  
@@ -110,11 +110,23 @@
           <li><a href="#m4">有害藻华的原因种类型</a></li>
         </ul>
       </aside>
-     <img src="封面2.jpg" alt="HABs in China" width="600" height="300">
+       
+     <article class="e1">
+    <img src="封面2.jpg" alt="HABs in China" width="600" height="300">
         <p>广泛存在于中国渤海、黄海、东海和南海海域的4大海域的有害藻华已经成为中国近海海域最严重的海洋灾害问题。</p>
          <p>常发生于中国海洋近岸的河口、海湾等区域的有害藻华能造成大量的海洋生物伤亡，从而给近海养殖业、人体健康和海洋生态系统安全带来不容忽视的损害。近年来，全球气候变暖和人为污染物排放量显著增加的背景下，近海爆发愈发频繁的有害藻华的给中国海洋污染监测和治理带来巨大的挑战。</p>
           <p>由于21世纪之前的中国近海有害藻华数据统计资料的分散性和有限性，中国近海有害藻华年际变化分布以及其发生变化机制的相关研究进展十分有限。</p>
-       <h2>有害藻华的定义</h2>
+    </article>
+      <article class="m1">
+       <h2>项目介绍</h2>
+         <p>近年来，已成为中国近海突出的海洋生态灾害问题的有害藻华对人体健康、社会经济和海洋生态安全造成了威胁。定量化有害藻华的时空分布和其主要原因种的变化，探究有害藻华发生机理对改善和控制有害藻华事件发生至关重要。</p>
+         <p>基于《中国赤潮灾害调查与评价1933-2009》、《赤潮100问》书籍，1989-2018年的《中国海洋环境质量状况公报》、2000-2018年的《中国海洋灾害公报》、《中国东海海区海洋环境公报》、《浙江省海洋环境状况公报》、《舟山市海洋环境状况公报》等国家、各海区和各省市的海洋公报年等文献资料，本项目校对和补充了由余弋和黄睿整理的1933年以来的中国渤海、黄海、东海和南海的有害藻华事件，量化了其时空分布变化。
+      从《中国赤潮灾害调查与评价1933-2009》以及相关网站收集有记录的有害藻华相关的所有原因种的相关界门科目科属种的相关信息，统计各海域有害藻华的主要原因种的时空分布特征。</p>
+         <p>从NOAA等网站获取了各海域对应的流域氮、海洋表面温度、风速、降水等观测和再分析的数据。使用广义线性回归建立了各个海域的特定原因种的有害藻华频数变化的驱动模型以此计算出能在最大程度解释其变化的变量组合。</p>
+         <p>项目资助方桃花源生态保护基金会蓝色倡议专项，是专注于海洋保护的资助型项目，汇集了一批热心海洋保护的企业家和慈善家共同支持海洋保护工作。 将支持高校、科研院所和社会组织展开一线保护行动。在桃花源生态保护基金会的支持下，上海交大海洋学院周韫韬团队进行了中国近海有害藻华项目的工作。</p>
+   </article>
+       <article class="m2">
+        <h2>有害藻华的定义</h2>
          <p> 有害藻华(Harmful algal Blooms, HAB)是在一定条件下，由海洋浮游微藻或大型藻类等快速增殖或聚集，导致海洋生态系统严重破坏或引起水色变化的一种灾害性海洋生态异常现象。 赤潮（Red tide）和褐潮（Green tide）和绿潮（Brown tide）是中国HAB的主要类型。HAB常发生于东海、渤海和南海海洋近岸的河口、海湾等区域，近海,其中渤海湾、长江口和珠江口等海域是中国HAB的热点地区。</p>
      <figure>
      <ul>
@@ -132,6 +144,32 @@
         </li>
       </ul>
       </figure>
+         </article>
+     <article class="m3">
+    <h2>有害藻华的危害</h2>
+       <ol>
+          <li>大量海洋生物死亡<br>
+           部分藻种能产生毒素，损伤海洋生物组织、改变水体理化环境等危害海洋生物生存，或使生物染毒甚至死亡。</li>
+          <li>危害人体健康<br>
+           直接接触有毒的HAB以及食用含有毒素的鱼类会对人体健康产生显著的危害。</li>
+          <li>显著的渔业经济损失<br>
+           有毒有害的HAB会使鱼类染毒或者大量死亡，从而使海水养殖业受到巨大的经济损失,例如，2012年中国近海的HAB导致了约20亿的渔业直接经济损失。</li>
+          <li>影响滨海景观<br>
+          HAB能降低近海海水质量、滨海景观，破坏滨海生态系统，从而能直接对滨海旅游业产生负面影响。</li>
+          <li>破坏海洋生态系统<br>
+          密集覆盖特定海域的HAB能造成大量海洋生物的死亡，并且能创造出“死区”，从而导致直接威胁特定海域的生态安全。</li>
+         </ol>
+       </article>
+       <article class="m4">
+      <h2 >有害藻华的原因种类型</h2>
+          <p>基于HAB统计数据可知，甲藻、硅藻是中国4大海区HAB的主导原因种，着色鞭毛藻和蓝藻等原因种也有零星分布,其中作为有毒有害原因种主导的HAB则能使海洋生态安全和社会经济遭受损失。由于不同藻种的生长环境有所差异，不同海区不同季节内的HAB的主导原因种比较多元化。中国近海HAB常见的主导原因种有：</p>
+    <ul>
+      <li>甲藻：东海原甲藻、夜光藻（无毒），米氏凯伦藻（有毒）。</li>
+      <li>硅藻：中肋骨条藻（无毒），伪柔弱拟菱形藻（有毒）。</li>
+      <li>着色鞭毛藻：海洋卡盾藻（有毒），抑食金球藻（有毒）。</li>
+      <li>蓝藻：汉氏束毛藻（无毒），铜锈微囊藻（有毒）。</li>
+     </ul> 
+         </article>  
     </div>
     <div>
       <h2>The second tab</h2>
