--- a/HAB1.html
+++ b/HAB1.html
@@ -7,86 +7,6 @@
 
   /* General setup */
 
-  html {
-    font-family: sans-serif;
-  }
-
-  * {
-    box-sizing: border-box;
-  }
-
-  body {
-    margin: 0;
-  }
-
-  /* info-box setup */
-
-  .info-box {
-    width: 1100px;
-    height: 2000px;
-    margin: 10px auto 0;
-  }
-
-  /* styling info-box tabs */
-
-  .info-box ul {
-    border: 1px solid #b60000;
-    overflow: hidden;
-    height: 50px;
-    margin: 0;
-    padding: 0;
-  }
-
-  .info-box li {
-    float: left;
-    list-style-type: none;
-    width: 150px;
-  }
-
-  .info-box li a {
-    display: inline-block;
-    text-decoration: none;
-    width: 100%;
-    line-height: 50px;
-    background: white;
-    color: #b60000;
-    text-align: center;
-    font-weight: bold;
-  }
-
-  .info-box li a:focus, .info-box li a:hover {
-    background-color: #b60000;
-    color: white;
-  }
-
-  .info-box li a.active {
-    background-color: #b60000;
-    color: white;
-  }
-
-  /* styling info-box panels */
-
-  .info-box .panels {
-    clear: both;
-    position: relative;
-    height: 2000px;
-  }
-
-  .info-box div {
-    background-color: #b60000;
-    color: black;
-    position: absolute;
-    padding: 10px 20px;
-    height: 1800px;
-    top: 0;
-    left: 0;
-  }
-
-  .info-box .active-panel {
-    z-index: 1;
-  }
-
-
 
 </style>
 </head>
@@ -94,7 +14,7 @@
 
 <section class="info-box">
   <ul>
-    <li><a href="#" class="active">首页</a></li>
+    <li><a href="#" class="active">首12页</a></li>
     <li><a href="#">分布特征</a></li>
     <li><a href="#">Tab haha</a></li>
   </ul>
