--- a/HAB1.html
+++ b/HAB1.html
@@ -6,7 +6,25 @@
   <style>
 
   /* General setup */
+  html {
+    font-family: sans-serif;
+  }
 
+  * {
+    box-sizing: border-box;
+  }
+
+  body {
+    margin: 0;
+  }
+
+  /* info-box setup */
+
+  .info-box {
+    width: 452px;
+    height: 400px;
+    margin: 20px auto 0;
+  }
 
 </style>
 </head>
