--- a/HAB1.html
+++ b/HAB1.html
@@ -25,6 +25,32 @@
     height: 400px;
     margin: 20px auto 0;
   }
+    /* styling info-box tabs */
+
+  .info-box ul {
+    border: 1px solid #b60000;
+    overflow: hidden;
+    height: 50px;
+    margin: 0;
+    padding: 0;
+  }
+
+  .info-box li {
+    float: left;
+    list-style-type: none;
+    width: 150px;
+  }
+
+  .info-box li a {
+    display: inline-block;
+    text-decoration: none;
+    width: 100%;
+    line-height: 50px;
+    background: white;
+    color: #b60000;
+    text-align: center;
+    font-weight: bold;
+  }
 
 </style>
 </head>
