--- a/HAB1.html
+++ b/HAB1.html
@@ -51,6 +51,10 @@
     text-align: center;
     font-weight: bold;
   }
+      .info-box li a:focus, .info-box li a:hover {
+    background-color: #b60000;
+    color: white;
+  }
 
 </style>
 </head>
