--- a/HAB1.html
+++ b/HAB1.html
@@ -55,6 +55,11 @@
     background-color: #b60000;
     color: white;
   }
+    
+  .info-box li a.active {
+    background-color: #b60000;
+    color: white;
+  }
 
 </style>
 </head>
