--- a/HAB1.html
+++ b/HAB1.html
@@ -67,7 +67,7 @@
 
 <section class="info-box">
   <ul>
-    <li><a href="#" class="active">首12页</a></li>
+    <li><a href="#" class="active">首页</a></li>
     <li><a href="#">分布特征</a></li>
     <li><a href="#">Tab haha</a></li>
   </ul>
