--- a/HAB1.html
+++ b/HAB1.html
@@ -60,6 +60,13 @@
     background-color: #b60000;
     color: white;
   }
+ /* styling info-box panels */
+
+  .info-box .panels {
+    clear: both;
+    position: relative;
+    height: 352px;
+  }
 
 </style>
 </head>
