--- a/HAB1.html
+++ b/HAB1.html
@@ -67,6 +67,15 @@
     position: relative;
     height: 352px;
   }
+    .info-box article {
+    background-color: #b60000;
+    color: white;
+    position: absolute;
+    padding: 10px 20px;
+    height: 352px;
+    top: 0;
+    left: 0;
+  }
 
 </style>
 </head>
