--- a/HAB1.html
+++ b/HAB1.html
@@ -67,9 +67,9 @@
     position: relative;
     height: 352px;
   }
-    .info-box article {
+    .info-box div {
     background-color: #b60000;
-    color: white;
+    color: black;
     position: absolute;
     padding: 10px 20px;
     height: 352px;
@@ -86,7 +86,7 @@
 
 <section class="info-box">
   <ul>
-    <li><a href="#" class="active">首页11</a></li>
+    <li><a href="#" class="active">首页</a></li>
     <li><a href="#">分布特征</a></li>
     <li><a href="#">Tab haha</a></li>
   </ul>
