--- a/HAB1.html
+++ b/HAB1.html
@@ -21,8 +21,7 @@
   /* info-box setup */
 
   .info-box {
-    width: 452px;
-    height: 400px;
+    width: 80%;
     margin: 20px auto 0;
   }
     /* styling info-box tabs */
@@ -65,14 +64,12 @@
   .info-box .panels {
     clear: both;
     position: relative;
-    height: 352px;
   }
     .info-box div {
     background-color: #b60000;
     color: black;
     position: absolute;
     padding: 10px 20px;
-    height: 352px;
     top: 0;
     left: 0;
   }
