--- a/HAB1.html
+++ b/HAB1.html
@@ -64,6 +64,7 @@
   .info-box .panels {
     clear: both;
     position: relative;
+      height: 1800px;
   }
     .info-box div {
     background-color: #b60000;
