--- a/HAB1.html
+++ b/HAB1.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <title>Tabbed info box</title>
   <style>
+ /* General setup */
 
-  /* General setup */
   html {
     font-family: sans-serif;
   }
@@ -22,9 +22,11 @@
 
   .info-box {
     width: 80%;
+    height: 2000px;
     margin: 20px auto 0;
   }
-    /* styling info-box tabs */
+
+  /* styling info-box tabs */
 
   .info-box ul {
     border: 1px solid #b60000;
@@ -45,46 +47,53 @@
     text-decoration: none;
     width: 100%;
     line-height: 50px;
-    background: white;
+    background: blak;
     color: #b60000;
     text-align: center;
     font-weight: bold;
   }
-      .info-box li a:focus, .info-box li a:hover {
+
+  .info-box li a:focus, .info-box li a:hover {
     background-color: #b60000;
-    color: white;
+    color: blak;
   }
-    
+
   .info-box li a.active {
     background-color: #b60000;
-    color: white;
+    color: blak;
   }
- /* styling info-box panels */
+
+  /* styling info-box panels */
 
   .info-box .panels {
     clear: both;
     position: relative;
-      height: 1800px;
+    height: 1800px;
   }
-    .info-box div {
+
+  .info-box div {
     background-color: #b60000;
-    color: black;
+    color: blak;
     position: absolute;
     padding: 10px 20px;
+    height: 1500px;
     top: 0;
     left: 0;
   }
-.info-box .active-panel {
+
+  .info-box .active-panel {
     z-index: 1;
   }
-    
-</style>
+
+
+
+  </style>
 </head>
 <body>
 
 <section class="info-box">
   <ul>
-    <li><a href="#" class="active">首页11</a></li>
+    <li><a href="#" class="active">首页</a></li>
     <li><a href="#">分布特征</a></li>
     <li><a href="#">Tab haha</a></li>
   </ul>
