--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <aside> <!-- 侧边栏在主内容右侧 -->
         <h2>在此页面</h2>
          <ul>
-          <li><a href="#m1">项目介绍</a></li>
+          <li><a href="#m1">项目介绍1</a></li>
           <li><a href="#m2">有害藻华的定义</a></li>
           <li><a href="#m3">有害藻华的危害</a></li>
           <li><a href="#m4">有害藻华的原因种类型</a></li>
