--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	 <section class="info-box">	
     <nav>
 	    <ul>
-          <li> <a class=class="active" href="#">首页</a></li>
+          <li> <a class=class="active" href="#">1首页</a></li>
         <li><a href="#">HAB的时空分布</a></li>
         <li><a href="#">HAB原因种的时空分布</a></li>
         <li><a href="#">HAB的环境影响因素</a></li>
