--- a/HAB1.html
+++ b/HAB1.html
@@ -37,7 +37,7 @@
   }
 
   .info-box li {
-    float: left;
+    float: center;
     list-style-type: none;
     width: 150px;
   }
@@ -47,7 +47,7 @@
     text-decoration: none;
     width: 100%;
     line-height: 50px;
-    background: blak;
+    background: black;
     color: #b60000;
     text-align: center;
     font-weight: bold;
@@ -55,7 +55,7 @@
 
   .info-box li a:focus, .info-box li a:hover {
     background-color: #b60000;
-    color: blak;
+    color: black;
   }
 
   .info-box li a.active {
